Update and rename NEW LIFE.md to 2017-09-04-NEW-LIFE.md

--- a/_posts/2017-09-04-NEW-LIFE.md
+++ b/_posts/2017-09-04-NEW-LIFE.md
@@ -3,8 +3,9 @@ layout: post
 title: New life
 subtitle: Old Tony Z. Yang is dead
 author: Tony Z. Yang	
-tags: [new life]			
----		
+tags: [new life]
+date-string: September 04, 2017
+---
 
 <p>
 Old Tony Zeshi Yang is Dead. This is new Tony starts learning FinTech
